--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -53,6 +53,7 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
+console.log(userDatas[0])
 var userData = userDatas.find(data => userData.default.username === username)
 userData = updateMember(data, defaultBio, updateLeftMember, getUserGrade)
 
