--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -56,7 +56,7 @@ var userDatas = await Astro.glob('../../../members/*/info.js')
 var userData = {}
 // console.log(userDatas[0])
 userDatas.forEach((data, i) => {
-  console.log(i, userData.default)
+  console.log(i, userData.username)
   if (userData.default.username === username) userData = data
 })
 
