--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -35,6 +35,7 @@ export function getStaticPaths() {
 
 const { username } = Astro.params;
 if (!username) username = '_admin'
+console.log(username)
 
 import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
