--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -46,7 +46,7 @@ if (userData.status) {
   if (userData.status === 'activeGrad') userData.status = 'active'
 }
 else userData.status = 'inactive'
-
+console.log(userData.status)
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
