--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -41,7 +41,7 @@ var userDatas = await Astro.glob('../../../members/*/info.js')
 var userData = userDatas.find(data => data.default.username === username)
 
 userData = updateMember(userData)
-console.log(userData)
+console.log(username)
 
 if (userData.status) {
   if (userData.status === 'activeGrad') userData.status = 'active'
