--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -24,6 +24,7 @@ export function getStaticPaths() {
         {params: {username: 'sayuri'}}, 
         {params: {username: 'shikha'}}, 
 
+        {params: {username: 'default'}},
         {params: {username: 'juhi'}}, 
         {params: {username: 'rien'}}, 
         {params: {username: 'sam'}}, 
