--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -41,7 +41,7 @@ defaultMembers.forEach(m => {
 
     var mObj = {
         default: {
-            status: 'active'
+            status: 'active',
             username: `${username}?year=${year}`, 
             name: name, 
         }
