--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -27,28 +27,28 @@ var noRoleMembers = allMembers.filter(m => {
     else return false
 })
 
-defaultMembers.forEach(m => {
-    var name = m.name
-    var year = m.year
+// defaultMembers.forEach(m => {
+//     var name = m.name
+//     var year = m.year
 
-    var username = name.toLowerCase()
+//     var username = name.toLowerCase()
 
-    if (username.includes(' ')) {
-        username = username.split(' ')
+//     if (username.includes(' ')) {
+//         username = username.split(' ')
 
-        username = username[0]
-    }
+//         username = username[0]
+//     }
 
-    var mObj = {
-        default: {
-            status: 'active',
-            username: `${username}?year=${year}`, 
-            name: name, 
-        }
-    }
+//     var mObj = {
+//         default: {
+//             status: 'active',
+//             username: `${username}?year=${year}`, 
+//             name: name, 
+//         }
+//     }
 
-    noRoleMembers.push(mObj)
-})
+//     noRoleMembers.push(mObj)
+// })
 
 noRoleMembers.sort()
 
