--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -50,7 +50,7 @@ var noRoleMembers = allMembers.filter(m => {
 //     noRoleMembers.push(mObj)
 // })
 
-noRoleMembers.sort()
+// noRoleMembers.sort()
 
 if (roleMembers) {
     roleMembers.forEach(m => {
