--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,68 +1,5 @@
 ---
-var defaultMembers = [
-    {
-        name: 'Kodi Chin', 
-        year: 25, 
-    }
-]
-
-var allMembers = await Astro.glob('../../members/*/info.js')
-var members = []
-
-var roleMembers = allMembers.filter(m => {
-    m = m.default
-    if (m) {
-        var r = m.role
-        return !!r && r !== 'Member'
-    }
-    else return false
-})
-
-var noRoleMembers = allMembers.filter(m => {
-    m = m.default
-    if (m) {
-        var r = m.role
-        return !r || r === 'Member'
-    }
-    else return false
-})
-
-defaultMembers.forEach(m => {
-    var name = m.name
-    var year = m.year
-
-    var username = name.toLowerCase()
-
-    if (username.includes(' ')) {
-        username = username.split(' ')
-
-        username = username[0]
-    }
-
-    var mObj = {
-        default: {
-            status: 'active',
-            username: `${username}?year=${year}`, 
-            name: name, 
-        }
-    }
-
-    noRoleMembers.push(mObj)
-})
-
-// noRoleMembers.sort()
-
-if (roleMembers) {
-    roleMembers.forEach(m => {
-        members.push(m)
-    })
-}
-
-if (allMembers) {
-    allMembers.forEach(m => {
-        members.push(m)
-    })
-}
+var members = await Astro.glob('../../members/*/info.js')
 
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
