--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -16,6 +16,7 @@ export function getStaticPaths() {
         {params: {username: 'hanlin'}}, 
         {params: {username: 'isabelle'}}, 
         {params: {username: 'jeremy'}}, 
+        {params: {username: 'kodi'}}, 
         {params: {username: 'lorelai'}}, 
         {params: {username: 'luce'}}, 
         {params: {username: 'mia'}}, 
