--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -10,6 +10,7 @@ export function getStaticPaths() {
     return [
         {params: {username: 'adarsh'}}, 
         {params: {username: 'amelia'}}, 
+        {params: {username: 'arianna'}}, 
         {params: {username: 'beatriz'}}, 
         {params: {username: 'bridget'}}, 
         {params: {username: 'cedrus'}}, 
@@ -20,6 +21,7 @@ export function getStaticPaths() {
         {params: {username: 'lorelai'}}, 
         {params: {username: 'luce'}}, 
         {params: {username: 'mia'}}, 
+        {params: {username: 'miriam'}}, 
         {params: {username: 'robin'}}, 
         {params: {username: 'samantha'}}, 
         {params: {username: 'sayuri'}}, 
