--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -27,7 +27,7 @@ export function getStaticPaths() {
         {params: {username: 'samantha'}}, 
         {params: {username: 'sayuri'}}, 
         {params: {username: 'shikha'}}, 
-        {params: {username: 'shikha'}}, 
+        {params: {username: 'tyler'}}, 
 
         {params: {username: 'default'}},
         {params: {username: 'juhi'}}, 
