--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -2,6 +2,9 @@
 var allMembers = await Astro.glob('../../members/*/info.js')
 var members = []
 
+var orderedMembers = allMembers.filter(m => !!m.default.order)
+console.log(orderedMembers)
+
 allMembers.map(m => {
     var member = m.default
     var role = !!member.role ? (!!member.role.name ? member.role.name : '') : ''
