--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -4,7 +4,7 @@ var members = []
 
 var orderedMembers = allMembers.filter(m => !!m.default.order)
 
-if (orderedMembers.length < 0) {
+if (orderedMembers.length > 0) {
     for (let i = 1; i <= orderedMembers.length; i++) {
         var orderedMember = allMembers.filter(m => m.default.order === i)
         orderedMember.forEach(m => {
@@ -13,19 +13,17 @@ if (orderedMembers.length < 0) {
     }
 }
 
-console.log(members)
-
 allMembers.map(m => {
     var member = m.default
     var role = !!member.role ? (!!member.role.name ? member.role.name : '') : ''
-    var hasOrder = false//!!member.order
+    var hasOrder = !!member.order
 
     if (role !== 'Member' && !hasOrder) members.push(m)
 })
 allMembers.map(m => {
     var member = m.default
     var role = !!member.role ? (!!member.role.name ? member.role.name : '') : ''
-    var hasOrder = false//!!member.order
+    var hasOrder = !!member.order
 
     if (role === 'Member' && !hasOrder) members.push(m)
 })
