--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -112,7 +112,8 @@ function getLink(link) {
     </div>
   </nav>
   <div class="social">
-    <a href="https://instagram.com/4goodgraphics" title="Our Instagram" id="instagram"></a>
     <a href="mailto:hello@graphics-for-good.com" title="Email Us" id="email" target="_blank"></a>
+    <a href="https://instagram.com/4goodgraphics" title="Club Projects Instagram" id="instagram"></a>
+    <a href="https://instagram.com/g4g_dtech" title="Club Updates Instagram" id="instagram"></a>
   </div>
 </header>
