--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -23,11 +23,13 @@ export function getStaticPaths() {
         {params: {username: 'mia'}}, 
         {params: {username: 'miriam'}}, 
         {params: {username: 'maya'}}, 
+        {params: {username: 'parker'}}, 
         {params: {username: 'robin'}}, 
         {params: {username: 'samantha'}}, 
         {params: {username: 'sayuri'}}, 
         {params: {username: 'shikha'}}, 
         {params: {username: 'tyler'}}, 
+        {params: {username: 'zach'}}, 
 
         {params: {username: 'default'}},
         {params: {username: 'juhi'}}, 
