--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -64,6 +64,7 @@ var projects = [
 ---
 <Layout title="Projects">
   <main id="content" class="projects">
+    { JSON.stringify(projects) }
     {
       projects.map((row, i) => {
         {i !== 0 ? <span class="hHr"></span> : '' }
